force-app/main/default/objects/Appartment__c/fields/Miete_Photovoltaik_Anlage__c.field-meta.xml
<CustomField>
    <fullName>Miete_Photovoltaik_Anlage__c</fullName>
    <label>Miete Photovoltaik Anlage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>