force-app/main/default/objects/Appartment__c/fields/Mindestabgabepreis__c.field-meta.xml
<CustomField>
    <fullName>Mindestabgabepreis__c</fullName>
    <label>Mindestabgabepreis in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>