force-app/main/default/objects/Appartment__c/fields/MindestabgabepreisInProzent__c.field-meta.xml
<CustomField>
    <fullName>MindestabgabepreisInProzent__c</fullName>
    <label>Mindestabgabepreis in %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>