force-app/main/default/objects/Appartment__c/fields/Mindestkaufpreis__c.field-meta.xml
<CustomField>
    <fullName>Mindestkaufpreis__c</fullName>
    <label>Mindestkaufpreis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>