force-app/main/default/objects/Appartment__c/fields/Monatsbetrag_Pro_qm__c.field-meta.xml
<CustomField>
    <fullName>Monatsbetrag_Pro_qm__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monatsbetrag Pro  qm</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>