force-app/main/default/objects/Appartment__c/fields/Monthly_Rent__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Rent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monthly Rent</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>