force-app/main/default/objects/Appartment__c/fields/Monthly_rent_sq_m__c.field-meta.xml
<CustomField>
    <fullName>Monthly_rent_sq_m__c</fullName>
    <label>Monthly rent (sq m)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>