force-app/main/default/objects/Appartment__c/fields/Nachname_Kunde__c.field-meta.xml
<CustomField>
    <fullName>Nachname_Kunde__c</fullName>
    <formula>Customer__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nachname Kunde</label>
    <type>Text</type>
</CustomField>