force-app/main/default/objects/Appartment__c/fields/Nachname_Makler__c.field-meta.xml
<CustomField>
    <fullName>Nachname_Makler__c</fullName>
    <formula>Makler__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nachname Makler</label>
    <type>Text</type>
</CustomField>