force-app/main/default/objects/Appartment__c/fields/Net_asset_value__c.field-meta.xml
<CustomField>
    <fullName>Net_asset_value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Net asset value (%)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>