force-app/main/default/objects/Appartment__c/fields/Net_Asset_Value_AFA__c.field-meta.xml
<CustomField>
    <fullName>Net_Asset_Value_AFA__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Net Asset Value (% AFA)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>