force-app/main/default/objects/Appartment__c/fields/Notartermin__c.field-meta.xml
<CustomField>
    <fullName>Notartermin__c</fullName>
    <label>Notartermin</label>
    <type>Date</type>
</CustomField>