force-app/main/default/objects/Appartment__c/fields/Notary_And_Court_Costs_1_5__c.field-meta.xml
<CustomField>
    <fullName>Notary_And_Court_Costs_1_5__c</fullName>
    <formula>Purchase_Price__c  * Property__r.Notary_And_Court_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notar und Gerichtskosten (2,5%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>