force-app/main/default/objects/Appartment__c/fields/OeffentlicherStatus__c.field-meta.xml
<CustomField>
    <fullName>OeffentlicherStatus__c</fullName>
    <formula>CASE(TEXT(Status__c), 
&apos;Available&apos;, &apos;frei&apos;, 
&apos;Sold&apos;, &apos;Verkauft&apos;,
&apos;Verkauft&apos;, &apos;Verkauft&apos;,
&apos;Reserved&apos;, &apos;Reserviert&apos;,
&apos;Kontingent&apos;, &apos;Reserviert&apos;,
&apos;Reservierungsvorbereitung&apos;, &apos;Reserviert&apos;,
&apos;Reservierung angefragt&apos;, &apos;Reserviert&apos;,
&apos;Auftrag zur Beurkundung vorhanden&apos;, &apos;Reserviert&apos;,
&apos;Notar&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>