force-app/main/default/objects/Appartment__c/fields/OffenerBetrag__c.field-meta.xml
<CustomField>
    <fullName>OffenerBetrag__c</fullName>
    <formula>IF( OeffentlicherStatus__c = &apos;Verkauft&apos; &amp;&amp;  KaufpreisFaellig__c,
			IF(Bezahlt__c &gt; 0,
						beurkundeter_Kaufpreis__c - Bezahlt__c, 
						IF(MaBVBezahlt__c &gt; 0,
									beurkundeter_Kaufpreis__c - MaBVBezahlt__c,
									beurkundeter_Kaufpreis__c
						)
					),
			0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offener Betrag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>