force-app/main/default/objects/Appartment__c/fields/Opt_Zusatzkosten_auf_Kaufpreis_addieren__c.field-meta.xml
<CustomField>
    <fullName>Opt_Zusatzkosten_auf_Kaufpreis_addieren__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt. Zusatzkosten auf Kaufpreis addieren</label>
    <type>Checkbox</type>
</CustomField>