force-app/main/default/objects/Appartment__c/fields/Other_Fees__c.field-meta.xml
<CustomField>
    <fullName>Other_Fees__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Other Fees</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>