force-app/main/default/objects/Appartment__c/fields/Outdoor_AFA__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_AFA__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Outdoor (% AFA)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>