force-app/main/default/objects/Appartment__c/fields/PaidAmount__c.field-meta.xml
<CustomField>
    <fullName>PaidAmount__c</fullName>
    <formula>IF(Bezahlt__c &gt; 0,
    Bezahlt__c,
    IF(MaBVBezahlt__c &gt; 0,
        MaBVBezahlt__c,
        0
        ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Davon bezahlt (€)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>