force-app/main/default/objects/Appartment__c/fields/Payment_Start__c.field-meta.xml
<CustomField>
    <fullName>Payment_Start__c</fullName>
    <label>Payment Start</label>
    <type>Date</type>
</CustomField>