force-app/main/default/objects/Appartment__c/fields/Processing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Processing_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Processing Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>