force-app/main/default/objects/Appartment__c/fields/Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Purchase Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>