force-app/main/default/objects/Appartment__c/fields/Purchase_Price_sq_m__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price_sq_m__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Purchase Price (sq.m)</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>