force-app/main/default/objects/Appartment__c/fields/PurchasePriceRounded__c.field-meta.xml
<CustomField>
    <fullName>PurchasePriceRounded__c</fullName>
    <formula>ROUND(Purchase_Price__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kaufpreis gerundet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>