force-app/main/default/objects/Appartment__c/fields/Rabatt_bis__c.field-meta.xml
<CustomField>
    <fullName>Rabatt_bis__c</fullName>
    <description>Das Datum, bis wann es eine Rabatt-Aktion für das Apartment geben wird.</description>
    <inlineHelpText>Das Datum, bis wann es eine Rabatt-Aktion für das Apartment geben wird.</inlineHelpText>
    <label>Rabatt bis</label>
    <type>Date</type>
</CustomField>