force-app/main/default/objects/Appartment__c/fields/Rabatt_in__c.field-meta.xml
<CustomField>
    <fullName>Rabatt_in__c</fullName>
    <description>Rabatt in Euro, der den Kaufpreis des Apartments reduziert.
Dieser Wert kann nicht negativ sein.</description>
    <inlineHelpText>Rabatt in Euro, der den Kaufpreis des Apartments reduziert.
Dieser Wert kann nicht negativ sein.</inlineHelpText>
    <label>Rabatt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>