force-app/main/default/objects/Appartment__c/fields/Real_Estate_Transfer_Tax__c.field-meta.xml
<CustomField>
    <fullName>Real_Estate_Transfer_Tax__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Real Estate Transfer Tax</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>