force-app/main/default/objects/Appartment__c/fields/Rent_Increase1__c.field-meta.xml
<CustomField>
    <fullName>Rent_Increase1__c</fullName>
    <defaultValue>&quot; &quot;</defaultValue>
    <label>Rent Increase1</label>
    <length>45</length>
    <type>Text</type>
</CustomField>