force-app/main/default/objects/Appartment__c/fields/Rent_Increase_In__c.field-meta.xml
<CustomField>
    <fullName>Rent_Increase_In__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rent Increase In%</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>