force-app/main/default/objects/Appartment__c/fields/Rent_Parking_Space__c.field-meta.xml
<CustomField>
    <fullName>Rent_Parking_Space__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rent Parking Space</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>