force-app/main/default/objects/Appartment__c/fields/Rental_return__c.field-meta.xml
<CustomField>
    <fullName>Rental_return__c</fullName>
    <formula>if(Erbbauzins__c == NULL , Monthly_Rent__c *12 / Purchase_Price__c, (Monthly_Rent__c *12-Erbauzins_Monat__c*12) / Purchase_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endkundenrendite Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>