force-app/main/default/objects/Appartment__c/fields/Rental_return_old__c.field-meta.xml
<CustomField>
    <fullName>Rental_return_old__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rental return (%)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>