force-app/main/default/objects/Appartment__c/fields/Rental_Share_Introductory_Phase__c.field-meta.xml
<CustomField>
    <fullName>Rental_Share_Introductory_Phase__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rental Share Introductory Phase (%)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>