force-app/main/default/objects/Appartment__c/fields/Rental_Start__c.field-meta.xml
<CustomField>
    <fullName>Rental_Start__c</fullName>
    <label>Rental Start</label>
    <type>Date</type>
</CustomField>