force-app/main/default/objects/Appartment__c/fields/Rental_Status__c.field-meta.xml
<CustomField>
    <fullName>Rental_Status__c</fullName>
    <label>Rental Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>