force-app/main/default/objects/Appartment__c/fields/RentalReturnFormulaVP__c.field-meta.xml
<CustomField>
    <fullName>RentalReturnFormulaVP__c</fullName>
    <formula>Rental_return__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rendite Formel VP</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>