force-app/main/default/objects/Appartment__c/fields/Repayment_Beginning__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Beginning__c</fullName>
    <label>Repayment Beginning</label>
    <type>Date</type>
</CustomField>