force-app/main/default/objects/Appartment__c/fields/Reserviert_bis__c.field-meta.xml
<CustomField>
    <fullName>Reserviert_bis__c</fullName>
    <label>Reserviert bis</label>
    <type>DateTime</type>
</CustomField>