force-app/main/default/objects/Appartment__c/fields/ReserviertFuer__c.field-meta.xml
<CustomField>
    <fullName>ReserviertFuer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reserviert für</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Teilobjekte</relationshipLabel>
    <relationshipName>ReservierteTeilobjekte</relationshipName>
    <type>Lookup</type>
</CustomField>