force-app/main/default/objects/Appartment__c/fields/Room_No__c.field-meta.xml
<CustomField>
    <fullName>Room_No__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Room No</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>