force-app/main/default/objects/Appartment__c/fields/SecondMabvInvoice__c.field-meta.xml
<CustomField>
    <fullName>SecondMabvInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2. MaBV Rechnung</label>
    <referenceTo>MaBVRechnung__c</referenceTo>
    <relationshipLabel>Teilobjekte (2. MaBV Rechnung)</relationshipLabel>
    <relationshipName>TeilobjekteSecondMabvInvoice</relationshipName>
    <type>Lookup</type>
</CustomField>