force-app/main/default/objects/Appartment__c/fields/SeventhMabvInvoice__c.field-meta.xml
<CustomField>
    <fullName>SeventhMabvInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>7. MaBV Rechnung</label>
    <referenceTo>MaBVRechnung__c</referenceTo>
    <relationshipLabel>Teilobjekte (7. MaBV Rechnung)</relationshipLabel>
    <relationshipName>TeilobjekteSeventhMabvInvoice</relationshipName>
    <type>Lookup</type>
</CustomField>