force-app/main/default/objects/Appartment__c/fields/SixthMabvInvoice__c.field-meta.xml
<CustomField>
    <fullName>SixthMabvInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>6. MaBV Rechnung</label>
    <referenceTo>MaBVRechnung__c</referenceTo>
    <relationshipLabel>Teilobjekte (6. MaBV Rechnung)</relationshipLabel>
    <relationshipName>TeilobjekteSixthMabvInvoice</relationshipName>
    <type>Lookup</type>
</CustomField>