force-app/main/default/objects/Appartment__c/fields/SoldFor__c.field-meta.xml
<CustomField>
    <fullName>SoldFor__c</fullName>
    <formula>IF  (OeffentlicherStatus__c = &apos;Verkauft&apos; ,beurkundeter_Kaufpreis__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Davon verkauft (€)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>