force-app/main/default/objects/Appartment__c/fields/SoldNotBilled__c.field-meta.xml
<CustomField>
    <fullName>SoldNotBilled__c</fullName>
    <formula>IF( OeffentlicherStatus__c=&apos;Verkauft&apos;,
			beurkundeter_Kaufpreis__c - IF(KaufpreisFaellig__c,
																																		IF(AND(MaBVAbgerechnet__c &gt; 0,MaBVBezahlt__c &gt; 0),
																																					MaBVAbgerechnet__c,
																																					IF(AND(MaBVAbgerechnet__c &gt; 0,Bezahlt__c=0),
																																								MaBVAbgerechnet__c,
																																								IF((ISPICKVAL(Property__r.Kaufpreiszahlung__c,&quot;MaBV&quot;) || ISPICKVAL(Property__r.Kaufpreiszahlung__c,&quot;Externes Vertriebsprojekt (MaBV)&quot;)),
																																										IF(Property__r.FORMULA_AktuelleMaBVRate_Num__c &lt;&gt; 7,
																																												0,
																																												beurkundeter_Kaufpreis__c
																																												),
																																										beurkundeter_Kaufpreis__c))
																																				), 
																																		Bezahlt__c),
			0
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verkauft, nicht abgerechnet (€)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>