force-app/main/default/objects/Appartment__c/fields/Start_Of_Rental__c.field-meta.xml
<CustomField>
    <fullName>Start_Of_Rental__c</fullName>
    <label>Start Of Rental</label>
    <type>Date</type>
</CustomField>