force-app/main/default/objects/Appartment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kontingent</fullName>
            </value>
            <value>
                <fullName>Reservierungsvorbereitung</fullName>
            </value>
            <value>
                <fullName>Reservierung angefragt</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Kaufvertragsangebot abgegeben</fullName>
            </value>
            <value>
                <fullName>KV wird fremd abgegeben</fullName>
            </value>
            <value>
                <fullName>Kaufvertragsunterlagen verschickt -zweiseitig-</fullName>
            </value>
            <value>
                <fullName>Auftrag zur Beurkundung vorhanden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>