force-app/main/default/objects/Appartment__c/fields/StatusStyles__c.field-meta.xml
<CustomField>
    <fullName>StatusStyles__c</fullName>
    <formula>IF(TEXT(Status__c) = &apos;Sold&apos;, &apos;slds-theme_info&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Styles</label>
    <type>Text</type>
</CustomField>