force-app/main/default/objects/Appartment__c/fields/SubstanzwertInEuro__c.field-meta.xml
<CustomField>
    <fullName>SubstanzwertInEuro__c</fullName>
    <formula>Property__r.Building_Share_Value__c  *  IF(DeviatingPurchasePrice__c != 0 &amp;&amp; !IsBlank(DeviatingPurchasePrice__c),DeviatingPurchasePrice__c,Purchase_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Substanzwert in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>