force-app/main/default/objects/Appartment__c/fields/Surcharges_Description__c.field-meta.xml
<CustomField>
    <fullName>Surcharges_Description__c</fullName>
    <defaultValue>&quot; &quot;</defaultValue>
    <label>Surcharges  Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>