force-app/main/default/objects/Appartment__c/fields/TeamProQId__c.field-meta.xml
<CustomField>
    <fullName>TeamProQId__c</fullName>
    <description>External ID for TeamproQ Integration</description>
    <externalId>true</externalId>
    <label>TeamProQ ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>