force-app/main/default/objects/Appartment__c/fields/ThirdMabvInvoice__c.field-meta.xml
<CustomField>
    <fullName>ThirdMabvInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3. MaBV Rechnung</label>
    <referenceTo>MaBVRechnung__c</referenceTo>
    <relationshipLabel>Teilobjekte (3. MaBV Rechnung)</relationshipLabel>
    <relationshipName>TeilobjekteThirdMabvInvoice</relationshipName>
    <type>Lookup</type>
</CustomField>