force-app/main/default/objects/Appartment__c/fields/Updated__c.field-meta.xml
<CustomField>
    <fullName>Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated</label>
    <type>Checkbox</type>
</CustomField>