force-app/main/default/objects/Appartment__c/fields/Value_Furniture__c.field-meta.xml
<CustomField>
    <fullName>Value_Furniture__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Möblierung wert</description>
    <label>Value Furniture</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>