force-app/main/default/objects/Appartment__c/fields/Value_of_OIutdoor__c.field-meta.xml
<CustomField>
    <fullName>Value_of_OIutdoor__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Value of OIutdoor (%)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>