force-app/main/default/objects/Appartment__c/fields/Value_of_Parking_Space__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Parking_Space__c</fullName>
    <description>Substanzwert Stellplatz</description>
    <label>Value of Parking Space</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>