force-app/main/default/objects/Appartment__c/fields/Value_Parking_Space__c.field-meta.xml
<CustomField>
    <fullName>Value_Parking_Space__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Value Parking Space</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>