force-app/main/default/objects/Appartment__c/fields/Value_Preservation__c.field-meta.xml
<CustomField>
    <fullName>Value_Preservation__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Value Preservation (%)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>