force-app/main/default/objects/Appartment__c/fields/Value_Unit__c.field-meta.xml
<CustomField>
    <fullName>Value_Unit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Value Unit (%)</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>