force-app/main/default/objects/Appartment__c/fields/VKC_Phase__c.field-meta.xml
<CustomField>
    <fullName>VKC_Phase__c</fullName>
    <formula>IF(ISBLANK(ReserviertFuer__c), &apos;Verfügbar&apos;, TEXT(ReserviertFuer__r.StageName))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VKC-Phase</label>
    <type>Text</type>
</CustomField>