force-app/main/default/objects/Appartment__c/fields/Vorname_makler__c.field-meta.xml
<CustomField>
    <fullName>Vorname_makler__c</fullName>
    <formula>Makler__r.ReportsTo.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vorname Makler</label>
    <type>Text</type>
</CustomField>