force-app/main/default/objects/Appartment__c/fields/Wert_Einrichtung_in_Euro__c.field-meta.xml
<CustomField>
    <fullName>Wert_Einrichtung_in_Euro__c</fullName>
    <label>Wert Einrichtung in €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>