force-app/main/default/objects/Appartment__c/fields/Wert_K_che__c.field-meta.xml
<CustomField>
    <fullName>Wert_K_che__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Wert Küche</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>