force-app/main/default/objects/Appartment__c/fields/Wert_Photovoltaik_Anlage__c.field-meta.xml
<CustomField>
    <fullName>Wert_Photovoltaik_Anlage__c</fullName>
    <label>Wert Photovoltaik Anlage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>