force-app/main/default/objects/Appartment__c/fields/WertAussenanlagenInEuro__c.field-meta.xml
<CustomField>
    <fullName>WertAussenanlagenInEuro__c</fullName>
    <formula>Property__r.Value_Of_Outdoor__c  *  IF(DeviatingPurchasePrice__c != 0 &amp;&amp; !IsBlank(DeviatingPurchasePrice__c),DeviatingPurchasePrice__c,Purchase_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wert Außenanlagen in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>