force-app/main/default/objects/Appartment__c/fields/WertGrundstueckInEuro__c.field-meta.xml
<CustomField>
    <fullName>WertGrundstueckInEuro__c</fullName>
    <formula>Property__r.Value_Plot__c * IF(DeviatingPurchasePrice__c != 0 &amp;&amp; !IsBlank(DeviatingPurchasePrice__c),DeviatingPurchasePrice__c,Purchase_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wert Grundstück in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>