force-app/main/default/objects/Appartment__c/fields/Zimmerart__c.field-meta.xml
<CustomField>
    <fullName>Zimmerart__c</fullName>
    <label>Zimmerart</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Einzelzimmer</fullName>
            </value>
            <value>
                <fullName>Doppelzimmer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>