force-app/main/default/objects/Appartment__c/validationRules/PurchasePriceCantBeChangedWithoutRF.validationRule-meta.xml
<ValidationRule>
    <fullName>PurchasePriceCantBeChangedWithoutRF</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Purchase_Price__c),
    ABS(Purchase_Price__c - PRIORVALUE(Purchase_Price__c)) &gt; 1,
    Property__r.PriceAdjustmentOnlyAfterRFConsultation__c,
    NOT($Permission.CanChangePurchasePrice),
    LEFT($User.ProfileId, 15) &lt;&gt; &quot;00eb0000000VEnA&quot;
)</errorConditionFormula>
    <errorDisplayField>Purchase_Price__c</errorDisplayField>
    <errorMessage>Der Preis darf nur nach Rücksprache mit R&amp;F angepasst werden.</errorMessage>
</ValidationRule>