force-app/main/default/objects/Appartment__c/validationRules/x01_Contingent_Date_Must_Be_Set.validationRule-meta.xml
<ValidationRule>
    <fullName>x01_Contingent_Date_Must_Be_Set</fullName>
    <active>true</active>
    <description>If Status is &quot;Kontingent&quot; the record must have a &quot;Reserviert bis&quot; expiration date or a related Opportunity.</description>
    <errorConditionFormula>AND( ISPICKVAL(Status__c,&apos;Kontingent&apos;), ISBLANK(Reserviert_bis__c),ISBLANK(Customer__c))</errorConditionFormula>
    <errorDisplayField>Reserviert_bis__c</errorDisplayField>
    <errorMessage>Please set expiration date for status &quot;Kontingent&quot; or connect to a customer. (Error x01)</errorMessage>
</ValidationRule>