force-app/main/default/objects/Appartment__c/validationRules/x02_Contingent_Requester_Must_Be_Set.validationRule-meta.xml
<ValidationRule>
    <fullName>x02_Contingent_Requester_Must_Be_Set</fullName>
    <active>true</active>
    <description>If Status is &quot;Kontingent&quot; the record must have a Requester for this contingent.</description>
    <errorConditionFormula>AND( ISPICKVAL(Status__c,&apos;Kontingent&apos;), ISBLANK(ContingentRequester__c),ISBLANK(Customer__c))</errorConditionFormula>
    <errorDisplayField>ContingentRequester__c</errorDisplayField>
    <errorMessage>Please set an requester for status &quot;Kontingent&quot; or connect to a customer. (Error x02)</errorMessage>
</ValidationRule>