force-app/main/default/objects/Appartment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VKC_Phase__c</columns>
    <columns>PhaseFinanzierungsanfrage__c</columns>
    <columns>BewertungAmpelFinanzierungsanfrage__c</columns>
    <columns>Property__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Alle</label>
</ListView>